src/app/pharos-main/data-list/cards/long-target-card/long-target-card.component.scss
.container {
  display: flex;
  box-sizing: border-box;
  margin: 2px 0;
  padding-bottom: 30px;
}

.mat-card-title {
  cursor: pointer;
}

.mat-card-content {
  width: 100%;
}

.mat-card-subtitle {
  font-size: x-large;
}

.container:hover {
  background-color: #f6f6f6;
}

.toprow {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: flex-start;
}

.target-details {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  box-sizing: border-box;
}

.list-header {
  margin-top: 0.5vh;
}

.list-item {
  margin-left: 10px;
}

.section {
  max-width: 33%;
  min-width: 20%;
  padding: 20px;
}

.radar-chart {
  width: 150px;
  height: 150px;
}

.diseaseList {
  margin-top: 1.5vh;
  margin-bottom: 0;
}

.diseaseName {
  font-weight: bold;
  font-size: larger;
}

.association-list {
  margin-left: 1vw;
}

.disease_details{
  max-height:200px;
  overflow:hidden;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

.disease_details:hover{
  max-height: 1000px;
}

